@@ -1,3 +1,8 @@
+2007-03-18  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/accerciser.py: Show dialog and quit when
+	desktop accessibility is disabled (bug 418842).
+	
 2007-03-16 Peter Parente  <parente@cs.unc.edu>
 
 	* pyreqs.py: Fixed check for wnck when building RPM
